// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Conversation Message handles null message bodies 1`] = `
Object {
  "from": Object {
    "email": "collector@example.com",
  },
  "id": "420",
  "initial_message": "Loved some of the works at your fair booth!",
  "messages": Object {
    "edges": Array [],
  },
}
`;

exports[`Me Conversation Message returns proper is_from_user 1`] = `
Object {
  "conversation": Object {
    "from": Object {
      "email": "collector@example.com",
    },
    "id": "420",
    "initial_message": "Loved some of the works at your fair booth!",
    "messages": Object {
      "edges": Array [
        Object {
          "node": Object {
            "body": "I'm a cat oh yea!",
            "from": Object {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "id": "222",
            "is_from_user": true,
          },
        },
      ],
    },
  },
}
`;

exports[`Me Conversation Message returns sanitized messages 1`] = `
Object {
  "conversation": Object {
    "from": Object {
      "email": "collector@example.com",
    },
    "id": "420",
    "initial_message": "Loved some of the works at your fair booth!",
    "messages": Object {
      "edges": Array [
        Object {
          "node": Object {
            "body": "I'm a cat oh yea!",
            "from": Object {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "id": "222",
          },
        },
      ],
    },
  },
}
`;
